Fixed menubar partly visible when inactive

--- a/chrome/common/menubar.css
+++ b/chrome/common/menubar.css
@@ -17,3 +17,12 @@
 		box-shadow: var(--zilla-win98-button-border-shadow-active);
 	}
 }
+
+/* hide menubar fully when inactive */
+#toolbar-menubar:is([inactive]) {
+ &, #main-menubar > menu {
+    border: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+ }
+}
